--- a/ecommerce-proyecto5/package.json
+++ b/ecommerce-proyecto5/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:M3S20":"node server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
